@@ -1,2 +1,3 @@
 [B]Version 1.1.6[/B]
 Added keyword alphabetical sorting
+Added Netflixporno
